Correct number of jump dots appended below carouse

--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ li {
   top: 500px; /*(height / 2) + 20 */
   z-index: 2;
   border: solid 1px black;
-  padding: 0.4em 0.6em 0.5em 0.6em;
+  padding: 0.4em 0.6em 0.35em 0.6em;
   font-size: 2em;
   background-color: black;
   color: white;
@@ -63,4 +63,21 @@ li {
 #next-button {
   display: inline-block;
   left: 400px; /*(width / 2) + 40*/
+}
+
+.jump-dot {
+  background-color: grey;
+  border-radius: 100%;
+  width: 1em;
+  height: 1em;
+  display: inline-block;
+  margin: 1em;
+}
+
+#jump-dots {
+  padding-top: 1em;
+  margin-left: auto;
+  margin-right: auto;
+  position: relative;
+  width: 20em;
 }
